--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "morgan": "^1.9.1",
+    "passport-local": "^1.0.0",
     "rimraf": "^2.6.2"
   },
   "devDependencies": {
