--- a/package.json
+++ b/package.json
@@ -23,13 +23,15 @@
     "lint": "tslint -p tsconfig.json -c tslint.json"
   },
   "dependencies": {
+    "@types/node": "^12.7.3",
     "babel-register": "^6.26.0",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
+    "dotenv": "^8.1.0",
     "express": "^4.17.1",
-    "jsonwebtoken": "^8.5.1",
     "morgan": "^1.9.1",
-    "passport-local": "^1.0.0",
+    "passport": "^0.4.0",
+    "passport-google-oauth20": "^2.0.0",
     "rimraf": "^2.6.2"
   },
   "devDependencies": {
