--- a/package.json
+++ b/package.json
@@ -34,8 +34,7 @@
     "morgan": "^1.9.1",
     "passport": "^0.4.0",
     "passport-google-oauth20": "^2.0.0",
-    "rimraf": "^2.6.2",
-    "typegoose": "^5.9.1"
+    "rimraf": "^2.6.2"
   },
   "devDependencies": {
     "prettier": "1.17.0",
