--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "lint": "tslint -p tsconfig.json -c tslint.json"
   },
   "dependencies": {
+    "@hasezoey/typegoose": "^5.9.2",
     "@types/node": "^12.7.3",
     "babel-register": "^6.26.0",
     "body-parser": "^1.19.0",
@@ -34,8 +35,7 @@
     "morgan": "^1.9.1",
     "passport": "^0.4.0",
     "passport-google-oauth20": "^2.0.0",
-    "rimraf": "^2.6.2",
-    "typegoose": "^5.9.1"
+    "rimraf": "^2.6.2"
   },
   "devDependencies": {
     "prettier": "1.17.0",
